--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,6 +10,7 @@ body{
 	min-width: 320px;
 	margin: 0px;
 	background: url('/images/bg-footer.jpg');
+	overflow-x: hidden;
 }
 
 a {
@@ -236,6 +237,8 @@ a.button {
 			}
 			.logo{
 				vertical-align: middle;
+				width: 64px;
+				height: 64px;
 			}
 			.name {
 				width: 200px;
@@ -265,6 +268,7 @@ a.button {
 			.index-link {
 				.logo {
 					width: 32px;
+					height: 32px;
 				}
 				.name {
 					display: none;
